--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
 .robinhood/
-web/
+
+# Logs
+web/logs
+web/*.log
+web/npm-debug.log*
+web/yarn-debug.log*
+web/yarn-error.log*
+web/pnpm-debug.log*
+web/lerna-debug.log*
+
+web/node_modules
+web/.DS_Store
+web/dist
+web/dist-ssr
+web/coverage
+web/*.local
+
+web/cypress/videos/
+web/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+web/*.suo
+web/*.ntvs*
+web/*.njsproj
+web/*.sln
+web/*.sw?
+
+web/*.tsbuildinfo
