--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chessboardjsx": "^2.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "react-websocket": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
